@@ -37,15 +37,10 @@ if (NOT ENABLE_UBUNTU AND NOT ENABLE_WEB)
     if (NOT WIN32 AND NOT APPLE)
         set(SUPPORT_SRCS ${SUPPORT_SRCS} gtkproxystyle.cpp shortcuthandler.cpp)
         set(SUPPORT_MOC_HDRS ${SUPPORT_MOC_HDRS} shortcuthandler.h)
-        add_subdirectory(themes)
     endif (NOT WIN32 AND NOT APPLE)
-    if (NOT WIN32)
-        set(SUPPORT_SRCS ${SUPPORT_SRCS} windowmanager.cpp)
-        set(SUPPORT_MOC_HDRS ${SUPPORT_MOC_HDRS} windowmanager.h)
-    endif (NOT WIN32)
     if (APPLE)
-        set(SUPPORT_SRCS ${SUPPORT_SRCS} osxstyle.cpp flattoolbutton.cpp)
-        set(SUPPORT_MOC_HDRS ${SUPPORT_MOC_HDRS} osxstyle.h)
+        set(SUPPORT_SRCS ${SUPPORT_SRCS} osxstyle.cpp flattoolbutton.cpp windowmanager.cpp)
+        set(SUPPORT_MOC_HDRS ${SUPPORT_MOC_HDRS} osxstyle.h windowmanager.h)
         if (ENABLE_QT5)
             qt5_add_resources(SUPPORT_RC_SRCS support_mac_icons.qrc)
         else (ENABLE_QT5)
