@@ -1,2 +1,0 @@
-file(GLOB CSS_FILES *.css)
-install(FILES ${CSS_FILES} DESTINATION ${SHARE_INSTALL_PREFIX}/${CMAKE_PROJECT_NAME}/themes)
