@@ -1,3 +1,0 @@
-/* drag:toolbar modview:ts*/
-QToolBar#MainToolBar { background-color: #2f343f; border: 0px;} QToolButton,QToolBar#MainToolBar QLabel { color: #afb8c6;} QToolBar#MainToolBar QToolButton,QToolBar#MainToolBar QLabel:active { color: #dfdbd2;} QToolBar#MainToolBar QToolButton:disabled,QToolBar#MainToolBar QLabel:disabled { color: #cfd8e6;} QToolBar#MainToolBar QToolButton { background: transparent; border: 1px outset transparent;} QToolBar#MainToolBar QToolButton:hover { background: #4c515c; border-radius: 2px; border: 1px solid #1f232f;} QToolBar#MainToolBar QToolButton:pressed,QToolBar#MainToolBar QToolButton:checked { background: #5294e2; border-radius: 2px; border: 1px solid #5294e2;} QToolBar#MainToolBar:separator { width: 1px; background: transparent; margin-left: 7px; margin-right: 7px;}
-
