@@ -1,3 +1,0 @@
-/* drag:toolbar modview:ts*/
-
-QToolBar#MainToolBar { background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 0.99, x3: 0, y3: 1, stop: 0 #cecece, stop: 0.99 #b6b6b6, stop: 1 #969696); border: 0px;} 
